# py-ad-principal

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/py_ad_principal/: __init__.py  py_ad_principal.py
src/py_ad_principal_jhallford/: py_ad_principal.py
tests/: ad_principal_test_config.toml  test_authentication_context.py  test_principal.py
